# AgentMaturityCompass

./: --json  --verbose  .dockerignore  .gitignore  .mcp.json  .tmp-a2a-events.json  .tmp-distributed-events.json  .tmp-gap-report.json  .tmp-memory-depth-events.json  AMC_COMPLETE_KNOWLEDGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS_G0DM0D3.md  COMPETITIVE_GAP_REPORT_G0DM0D3.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  HEARTBEAT.md  MEMORY.md  README.md  RESEARCH_GAPS_MARCH_2026.md  SECURITY.md  amc_product_determinism.db  amc_product_prompt_modules.db  amc_product_queues.db  amc_product_queues.db-shm  amc_product_queues.db-wal  compliance-eu_ai_act.json  compliance-eu_ai_act.md  compliance-gdpr.json  compliance-gdpr.md  compliance-hipaa.md  compliance-iso_27001.md  compliance-iso_42001.json  compliance-iso_42001.md  compliance-mitre_atlas.md  compliance-nist.md  compliance-nist_ai_rmf.json  compliance-nist_ai_rmf.md  compliance-pci_dss.md  (+17 more)
.amc/: action-policy.yaml  action-policy.yaml.sig  adapters.yaml  adapters.yaml.sig  agent.config.yaml  agent.config.yaml.sig  amc.config.yaml  approval-policy.yaml  approval-policy.yaml.sig  bridge.yaml  bridge.yaml.sig  budgets.yaml  budgets.yaml.sig  compliance-maps.yaml  fleet.yaml  fleet.yaml.sig  gatePolicy.json  gateway.yaml  gateway.yaml.sig  model-taxonomy.yaml  model-taxonomy.yaml.sig  ops-policy.yaml  ops-policy.yaml.sig  org.yaml  org.yaml.sig  pack-registries.json  score_sessions.sqlite  score_sessions.sqlite-shm  score_sessions.sqlite-wal  security-scan-lite.json  tools.yaml  tools.yaml.sig  trust-composition.yaml  trust.yaml.sig  users.yaml  users.yaml.sig  vault.amcvault  vault.amcvault.meta.json
.changeset/: mcp-transparency.md
.github/: dependabot.yml  pull_request_template.md
.serena/: project.yml
.v8cov/: coverage-57232-1771754434366-0.json
.v8cov-auth2/: coverage-58245-1771754443571-0.json  coverage-58274-1771754443474-1.json  coverage-58274-1771754443522-0.json
.v8cov-e2e/: coverage-57002-1771754432596-0.json  coverage-57026-1771754432505-1.json  coverage-57026-1771754432550-0.json
.v8cov-fast/: coverage-43293-1771754331380-0.json  coverage-43355-1771754331352-1.json  coverage-43588-1771754330749-0.json
.v8cov-sm/: coverage-21538-1771754435545-0.json  coverage-21554-1771754435462-0.json  coverage-25568-1771754178577-0.json  coverage-28434-1771754201151-0.json  coverage-28463-1771754201306-0.json  coverage-28533-1771754201546-0.json  coverage-28584-1771754202228-0.json
.v8cov2/: coverage-20580-1771754138087-0.json  coverage-20595-1771754138050-0.json
.v8cov3/: coverage-51047-1771754391548-0.json  coverage-51067-1771754391498-0.json
amc-action/: README.md  action.yml
api/: index.ts
docker/: Dockerfile.quickstart  docker-compose.yml
docs/: ADAPTERS.md  ADAPTER_COMPATIBILITY.md  AFTER_QUICKSCORE.md  AGENT_COUNCIL_100_RATINGS.md  AGENT_COUNCIL_100_REPORT.md  AGENT_GUIDE.md  AMC_MASTER_REFERENCE.md  AMC_QUESTION_BANK_FULL.json  AMC_STANDARD_RFC.md  AMC_TRUST_PROTOCOL.md  API_REFERENCE.md  ARCHITECTURE_BRIEF.md  ARCHITECTURE_MAP.md  ASSURANCE_LAB.md  ATTESTATION_EVIDENCE_PATHS.md  AUDIT_50_AGENTS_BATCH1.md  AUDIT_50_AGENTS_BATCH10.md  AUDIT_50_AGENTS_BATCH2.md  (+109 more)
sdk/python/: README.md  pyproject.toml
sdk/python/amc_sdk/: __init__.py  assurance.py  core.py  decorators.py  types.py
sdk/python/examples/: langchain_with_amc.py  quickstart.py  test_with_amc.py
sdk/python/tests/: test_types.py
src/sdk/python/: README.md  __init__.py  pyproject.toml
tools/evil-mcp-server/: README.md  pyproject.toml
tools/evil-mcp-server/evil_mcp_server/: __init__.py  config.py
tools/evil-mcp-server/evil_mcp_server/attacks/: __init__.py  data_exfil.py  priv_esc.py  rug_pull.py  tool_poison.py
(+21909 files in other folders)
