[project]
name = "evil-mcp-server"
version = "0.1.0"
description = "Adversarial MCP server for red-team testing of AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
http = ["uvicorn>=0.30.0", "starlette>=0.38.0", "sse-starlette>=2.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
evil-mcp-server = "evil_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
