[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amc-sdk"
version = "0.1.0"
description = "Python SDK for the Agent Maturity Compass (AMC) — AI agent trust scoring from execution evidence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "The Wise Crab", email = "thewisecrab@users.noreply.github.com"},
]
keywords = ["ai", "agent", "trust", "scoring", "maturity", "governance", "amc", "llm", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/thewisecrab/AgentMaturityCompass"
Documentation = "https://github.com/thewisecrab/AgentMaturityCompass/blob/main/docs/GETTING_STARTED.md"
Repository = "https://github.com/thewisecrab/AgentMaturityCompass"
Issues = "https://github.com/thewisecrab/AgentMaturityCompass/issues"

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]
langchain = ["langchain>=0.1.0"]
fastapi = ["fastapi>=0.100.0"]
flask = ["flask>=2.3.0"]
dev = ["pytest>=7.0", "httpx>=0.24.0"]
all = ["httpx>=0.24.0", "langchain>=0.1.0", "fastapi>=0.100.0", "flask>=2.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["amc_client*", "amc_middleware*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
